--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,15 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600;700;800;900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Shrikhand:wght@300;400;500;600;700;800;900&display=swap");
 
+
+* {
+   margin: 0;
+    padding: 0; 
+}
+
 body {
     font-family: Roboto;
+    
 }
 
 .logo {
@@ -11,10 +18,15 @@ body {
     display: block;
 }
 
+.header {
+    margin: 0.8rem;
+}
+
 .search_bar {
     background-color: #E4E4E4;
     height: 3rem;
     line-height: 3rem;
+    border-top: 0.2rem solid #C1C1C1;
 }
 
 #icon {
@@ -35,11 +47,15 @@ body {
 
 .Réservez {
     font-weight: bold;
-    font-size: 1.8rem;
+    font-size: 1.7rem;
+    margin: 2.8rem;
+    margin-bottom: 0;
 }
 
 .Découvrez {
-    font-size: 1.5rem;
+    font-size: 1.25rem;
+    margin-bottom: 2rem;
+    margin-top: 0.8rem;
 }
 
 .button_rechercher {
@@ -63,13 +79,13 @@ body {
     align-items: center;
     background-color: #F2F2F2;
     height: 5rem;
-    margin: 1.7rem 1rem 0;
+    margin: 1.7rem 1.3rem 0;
     border-radius: 1.5rem;
     box-shadow: 0px 5px 15px #D2D2D2;
 }
 
 .step_icon {
-    font-size: 1.3rem;
+    font-size: 1.2rem;
     margin: 1.8rem;
     color: grey;
 }
@@ -85,12 +101,55 @@ body {
     margin-left: -13px;
 }
 
+.Choisissez {
+    padding-left: 0.5rem;
+}
+
+.Dégustez {
+    margin-left: -0.3rem;
+}
+
+.restaurants_title {
+    padding: 3.6rem 1.3rem 0.3rem;
+}
+
 .restaurant_img {
     object-fit: cover;
     width: 100%;
-    height: 13rem;
+    height: 12rem;
 }
 
 .restaurant_card {
-    margin: 1rem;
+    margin: 1.3rem;
+    background-color: white;
+}
+
+.restaurants {
+    background-color: #F2F2F2;
+    margin-top: 4.5rem;
+}
+
+.restaurant_desc {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 0.8rem;
+    margin-left: 0.8rem;
+}
+
+.restaurant_name {
+    font-size: 1.2rem;
+    
+}
+
+.heart {
+    font-size: 1.5rem;
+    color: gray;
+    margin-right: 1.5rem;
+}
+
+.location {
+    font-size: 1.1rem;
+    padding-bottom: 0.8rem;
+    margin-top: 0.2rem;
+    margin-left: 0.8rem;
 }
