--- a/css/menusmartphone.css
+++ b/css/menusmartphone.css
@@ -53,7 +53,7 @@ h1 {
     background-color: #F2F2F2;
     border-radius: 3rem 3rem 0 0;
     margin-top: -55px;
-    position: absolute;
+    position: relative;
     width: 100%;
     padding-top: 5.5rem;
     
@@ -63,7 +63,7 @@ h2 {
     font-weight: normal;
     color:#565656;
     font-size: 1.2rem;
-    margin: 1.3rem;
+    padding: 1.9rem 1.3rem 0.5rem;
 }
 
 .entree {
@@ -90,4 +90,56 @@ h3 {
 .price {
     margin-right: 0.5rem;
     font-weight: bold;
+}
+
+.button_commander {
+    background-image: linear-gradient(#FF79DA, #9356DC);
+    height: 3.5rem;
+    width: 13rem;
+    border-radius: 11rem;
+    font-size: 1.1rem;
+    color: white;
+    margin-bottom: 4rem;
+    box-shadow: 0 5px 13px #B9B9B9;
+    border: none;
+}
+
+.button {
+    text-align: center;
+}
+
+footer {
+    background-color: #3B3B3B;
+    padding: 1.8rem;
+}
+
+.footer_title {
+    width: 6.9rem;
+    margin-bottom: 1.2rem;
+}
+
+.footer_icon {
+    color: white;
+    font-size: 0.9rem;
+}
+
+.footer_icon2 {
+    color: white;
+    font-size: 0.7rem;
+}
+
+.paragraph_flex {
+    color: white;
+    margin-left: 0.7rem;
+}
+
+.footer_flex {
+    display: flex;
+    align-items: center;
+    margin-bottom: 0.5rem;
+}
+
+.footer_paragraph {
+    color: white;
+    margin-bottom: 0.5rem;
 }
