--- a/css/menusmartphone.css
+++ b/css/menusmartphone.css
@@ -66,6 +66,15 @@ h2 {
     padding: 1.9rem 1.3rem 0.5rem;
 }
 
+hr {
+    width: 49px;
+    margin-left: 1.3rem;
+    height: 3px;
+    background-color: #99E2D0;
+    border: none;
+    margin-top: -3px;
+}
+
 .entree {
     background-color: white;
     margin: 1.3rem;
