--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,7 @@ body {
     font-size: 1.25rem;
     margin-bottom: 2rem;
     margin-top: 0.8rem;
+    color:#565656;
 }
 
 .button_rechercher {
@@ -73,7 +74,6 @@ body {
 .Fonctionnement {
     font-size: 1.7rem;
     margin: 3.2rem 1.3rem 0;
-    font-family: Shrikhand;
 }
 
 .step {
@@ -161,7 +161,7 @@ body {
 
 .heart {
     font-size: 1.5rem;
-    color: gray;
+    color: #565656;
     margin-right: 1.5rem;
 }
 
@@ -170,6 +170,7 @@ body {
     padding-bottom: 1rem;
     margin-top: 0.2rem;
     margin-left: 0.8rem;
+    color: #565656;
 }
 
 footer {
