--- a/css/menusmartphone.css
+++ b/css/menusmartphone.css
@@ -75,11 +75,34 @@ hr {
     margin-top: -3px;
 }
 
-.entree {
+.plat {
     background-color: white;
     margin: 1.3rem;
     padding: 1rem;
     border-radius: 1rem;
+
+    
+}
+
+@keyframes fadein {
+    from {
+        opacity:0;
+    }
+    to {
+        opacity:1;
+    }
+}
+
+#plat1 {
+    animation: fadein 2s;
+}
+
+#plat2 {
+    animation: fadein 4s;
+}
+
+#plat3 {
+    animation: fadein 6s;
 }
 
 .flex {
@@ -101,6 +124,11 @@ h3 {
     font-weight: bold;
 }
 
+.hidden {
+    position: absolute;
+  }
+
+
 .button_commander {
     background-image: linear-gradient(#FF79DA, #9356DC);
     height: 3.5rem;
@@ -111,6 +139,12 @@ h3 {
     margin-bottom: 4rem;
     box-shadow: 0 5px 13px #B9B9B9;
     border: none;
+    opacity: 1;
+}
+
+.button_commander:hover {
+    opacity: 0.5;
+    color: pink;
 }
 
 .button {
