--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,11 @@ body {
     
 }
 
+a {
+    text-decoration: none;
+    color: black;
+  }
+
 .logo {
     width: 11rem;
     margin: auto;
@@ -171,6 +176,33 @@ body {
     font-size: 1.5rem;
     color: #565656;
     margin-right: 1.5rem;
+    background-color: white;
+}
+
+.heart2 {
+    opacity: 0;
+    position: absolute;
+    color: #FF79DA;
+    right: 1.5rem;
+    font-size: 1.5rem;
+    
+}
+
+.heart2:hover {
+    color: #9356DC;
+    opacity: 1;
+    transition: color 500ms ease-in-out;
+}
+
+.heart2:active {
+    color: #9356DC;
+    opacity: 1;
+    transition: color 500ms ease;
+}
+
+.heart2:visited {
+    color: #9356DC;
+    opacity: 1;
 }
 
 .location {
