loader premier essai

--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,28 @@
     padding: 0; 
 }
 
+.loader {
+    position: absolute;
+    border: 16px solid #f3f3f3; /* Light grey */
+    border-top: 16px solid #9356DC; /* Blue */
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    animation: spin 3s linear 1s;
+    animation: opacity 1.0s ease-in-out 3.0s forwards;
+    
+  }
+  
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
+
+  @keyframes opacity {
+      0% { opacity: 100%;}
+      100% { opacity: 0;}
+  }
+
 body {
     font-family: Roboto;
     
@@ -188,11 +210,6 @@ a {
     
 }
 
-.heart2:hover {
-    color: #9356DC;
-    opacity: 1;
-    transition: color 500ms ease-in-out;
-}
 
 .heart2:active {
     color: #9356DC;
