--- a/css/style.css
+++ b/css/style.css
@@ -9,14 +9,15 @@
 
 .loader {
     position: absolute;
-    border: 16px solid #f3f3f3; /* Light grey */
-    border-top: 16px solid #9356DC; /* Blue */
+    border: 16px solid #e4e4e4;
+    border-top: 16px solid #9356DC;
     border-radius: 50%;
     width: 120px;
     height: 120px;
-    animation: spin 3s linear 1s;
-    animation: opacity 1.0s ease-in-out 3.0s forwards;
-    
+    opacity: 0;
+    animation: spin 3s linear, opacity 3.0s;
+    top: 18%;
+    right: 31%;
   }
   
   @keyframes spin {
@@ -26,8 +27,19 @@
 
   @keyframes opacity {
       0% { opacity: 100%;}
+      95% { opacity: 100%;}
       100% { opacity: 0;}
   }
+
+main {
+    opacity:1;
+    animation: opacity_main 3s;
+}
+
+@keyframes opacity_main {
+    0% { opacity: 0.3;}
+    100% { opacity: 0.3;}
+}
 
 body {
     font-family: Roboto;
@@ -210,13 +222,19 @@ a {
     
 }
 
+.heart2:hover {
+    color: #9356DC;
+    opacity: 1;
+    transition: color 1500ms ease-in-out;
+}
+
+
 
 .heart2:active {
     color: #9356DC;
     opacity: 1;
-    transition: color 500ms ease;
+    transition: color 1500ms ease-in-out;
 }
-
 
 .location {
     font-size: 1.1rem;
@@ -231,9 +249,11 @@ footer {
     padding: 1.8rem;
 }
 
-.footer_title {
-    width: 6.9rem;
+.logo_title {
     margin-bottom: 1.2rem;
+    font-size: 1.1rem;
+    color:white;
+    font-family: shrikhand;
 }
 
 .footer_icon {
