Accueil version desktop

--- a/css/style.css
+++ b/css/style.css
@@ -84,14 +84,14 @@ a {
     text-align: center;
 }
 
-.Réservez {
+.Reservez {
     font-weight: bold;
     font-size: 1.7rem;
     margin: 2.8rem;
     margin-bottom: 0;
 }
 
-.Découvrez {
+.Decouvrez {
     font-size: 1.25rem;
     margin-bottom: 2rem;
     margin-top: 0.8rem;
@@ -154,7 +154,7 @@ a {
     padding-left: 0.5rem;
 }
 
-.Dégustez {
+.Degustez {
     margin-left: -0.3rem;
 }
 
