--- a/css/Desktopaccueil.css
+++ b/css/Desktopaccueil.css
@@ -1,8 +1,26 @@
+body {
+    margin: 2rem 5rem 0;
+}
+
+.loader {
+    right: 45%;
+}
+
+.logo {
+    margin: 0;
+}
+
+.header {
+    margin: 0;
+    height: 6rem;
+}
+
 .search {
     display: grid;
-    grid-template-columns: 1fr 4fr;
+    grid-template-columns: 1fr 4.5fr;
     text-align: start;
     background-color: white;
+    row-gap: 0.7rem;
 }
 
 .search_bar {
@@ -12,6 +30,7 @@
     display: flex;
     background-color: white;
     border-top: 0;
+    height: 3.5rem;
 }
 
 #icon {
@@ -26,28 +45,129 @@
 }
 
 .search_box {
-    border: none;
     background-color: white;
-    font-size: 1.1rem;
-    width: 8rem;
     border: 2px #e3e3e3 solid;
-    height: 3.4rem;
+    height: 3.3rem;
     width: 100%;
-    padding-left: 2rem;
+    padding-left: 1.3rem;
+    font-size: 1rem;
 }
 
 .Reservez {
     grid-row: 1;
     grid-column: 1/ span2;
+    font-size: 1.3rem;
+    margin: 0;
 }
 
 .Decouvrez {
     grid-row: 2;
     grid-column: 1/ span2;
+    margin-bottom: 0.4rem;
+    margin-top: 0;
+    font-size: 1rem;
 }
 
 .button_rechercher {
     grid-row: 3;
     grid-column: 2;
     border-radius: 0 11rem 11rem 0;
+    box-shadow: 0 0;
+    width: 14rem;
+    font-size: 1rem;
+    margin-bottom: 1rem;
+}
+
+.Fonctionnement_du_site {
+    display: flex;
+    margin-left: 0;
+}
+
+.Fonctionnement {
+    font-size: 1rem;
+}
+
+h3 {
+    font-size: 1rem;
+    padding-right: 1.3rem;
+}
+
+.Choisissez {
+    padding-left: 0;
+}
+
+.step {
+    height: 4rem;
+}
+
+.restaurants {
+    margin: 4rem 3rem;
+    border-radius: 1rem;
+    padding: 0;
+}
+
+.all_restaurants {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding: 3rem;
+    column-gap: 1.5rem;
+    row-gap: 1.5rem;
+}
+
+h2 {
+    grid-column: 1/ span 2;
+    
+}
+
+.restaurants_title {
+    padding-top: 0.5rem;
+    padding-bottom: 1rem;
+}
+
+.restaurant_card {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    height: 12rem;
+    grid-template-rows: 1.2fr 1fr 3fr;
+}
+
+a {
+    grid-row: 1/ span 2;
+}
+
+.restaurant_img {
+    border-radius: 1rem 0 0 1rem;
+}
+
+.resrtaurant_desc {
+    grid-row: 1;
+    grid-column: 2;
+}
+
+.location {
+    grid-row: 2;
+    grid-column: 2;
+}
+
+.Nouveau {
+    bottom: 1rem;
+    top: auto;
+}
+
+footer {
+    display: flex;
+    justify-content: space-between;
+    padding: 3rem;
+}
+
+.logo_title {
+    margin: 0;
+}
+
+.footer_flex {
+    margin: 0;
+}
+
+.footer_paragraph {
+    margin: 0;
 }
