--- a/css/style.css
+++ b/css/style.css
@@ -139,7 +139,7 @@ a {
     color: #9356DC;
 }
 
-.numérotation {
+.numerotation {
     background-color: #9356DC;
     border-radius: 100%;
     width: 1.6rem;
