--- a/css/Desktopaccueil.css
+++ b/css/Desktopaccueil.css
@@ -17,7 +17,7 @@ body {
 
 .search {
     display: grid;
-    grid-template-columns: 1fr 4.5fr;
+    grid-template-columns: auto 1fr;
     text-align: start;
     background-color: white;
     row-gap: 0.7rem;
@@ -34,14 +34,15 @@ body {
 }
 
 #icon {
-    padding-left: 1.3rem;
+    padding-left: 0.5rem;
     border-radius: 11rem 0rem 0rem 11rem;
     background-color: #e3e3e3;
     height: 3.5rem;
-    width: 3rem;
+    width: 4rem;
     display: flex;
     align-items: center;
     margin: 0;
+    justify-content: center;
 }
 
 .search_box {
@@ -87,11 +88,6 @@ body {
     font-size: 1rem;
 }
 
-h3 {
-    font-size: 1rem;
-    padding-right: 1.3rem;
-}
-
 .Choisissez {
     padding-left: 0;
 }
@@ -109,9 +105,9 @@ h3 {
 .all_restaurants {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    padding: 3rem;
-    column-gap: 1.5rem;
-    row-gap: 1.5rem;
+    padding: 3.5rem;
+    column-gap: 2rem;
+    row-gap: 2rem;
 }
 
 h2 {
@@ -120,38 +116,7 @@ h2 {
 }
 
 .restaurants_title {
-    padding-top: 0.5rem;
-    padding-bottom: 1rem;
-}
-
-.restaurant_card {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    height: 12rem;
-    grid-template-rows: 1.2fr 1fr 3fr;
-}
-
-a {
-    grid-row: 1/ span 2;
-}
-
-.restaurant_img {
-    border-radius: 1rem 0 0 1rem;
-}
-
-.resrtaurant_desc {
-    grid-row: 1;
-    grid-column: 2;
-}
-
-.location {
-    grid-row: 2;
-    grid-column: 2;
-}
-
-.Nouveau {
-    bottom: 1rem;
-    top: auto;
+    padding-top: 0;
 }
 
 footer {
