--- a/css/Desktopaccueil.css
+++ b/css/Desktopaccueil.css
@@ -1,5 +1,23 @@
+@media screen and (min-width: 974px){
+    .header {
+        margin: 0 5rem;
+    }
+    .main_header {
+    margin: 0 5rem;
+}
+}
+
+@media screen and (max-width: 973px){
+    .header {
+        margin: 0 1rem;
+    }
+    .main_header {
+        margin: 0 1rem;
+    }
+}
+
 body {
-    margin: 2rem 5rem 0;
+    margin: 2rem 0 0;
 }
 
 .loader {
@@ -11,9 +29,11 @@ body {
 }
 
 .header {
-    margin: 0;
+    
     height: 6rem;
 }
+
+
 
 .search {
     display: grid;
@@ -94,6 +114,27 @@ body {
 
 .step {
     height: 4rem;
+}
+
+.step h3 {
+    margin-right: 1.5rem;
+    font-size: 1rem;
+}
+
+@media screen and (max-width: 1288px){
+
+    .Fonctionnement {
+        display: none;
+    }
+
+    .step_icon {
+        opacity: 0;
+        position: absolute;
+    }
+
+    .step h3 {
+        margin: 0 1.5rem;
+    }
 }
 
 .restaurants {
