--- a/css/Desktopaccueil.css
+++ b/css/Desktopaccueil.css
@@ -99,6 +99,10 @@ body {
     margin-bottom: 1rem;
 }
 
+.button_rechercher:hover {
+    opacity: 0.5;
+}
+
 .Fonctionnement_du_site {
     display: flex;
     margin-left: 0;
@@ -106,6 +110,7 @@ body {
 
 .Fonctionnement {
     font-size: 1rem;
+    margin: 2.7rem 1.3rem 0 0;
 }
 
 .Choisissez {
@@ -113,7 +118,7 @@ body {
 }
 
 .step {
-    height: 4rem;
+    height: 3rem;
 }
 
 .step h3 {
@@ -145,25 +150,33 @@ body {
 
 .all_restaurants {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 3.5rem;
-    column-gap: 2rem;
-    row-gap: 2rem;
-}
-
-h2 {
-    grid-column: 1/ span 2;
-    
+    grid-template-columns: repeat(4, 1fr);
+    padding: 1.5rem;
 }
 
 .restaurants_title {
     padding-top: 0;
+    grid-column: 1/ span 4;
+}
+
+@media screen and (max-width: 1250px){
+
+.all_restaurants {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.restaurants_title{
+    grid-column: 1/ span 2;
+    
+}
 }
 
 footer {
     display: flex;
     justify-content: space-between;
     padding: 3rem;
+    align-items: center;
 }
 
 .logo_title {
@@ -175,5 +188,20 @@ footer {
 }
 
 .footer_paragraph {
-    margin: 0;
-}
+        margin-top: 0.4rem;
+    }
+
+@media screen and (max-width: 930px){
+    .footer_icon {
+        opacity: 0;
+        position: absolute;
+    }
+    
+    .footer_icon2 {
+        opacity: 0;
+        position: absolute;
+    }
+    footer {
+        padding: 1.5rem;
+    }
+    }
