--- a/css/Desktopmenu.css
+++ b/css/Desktopmenu.css
@@ -1,7 +1,9 @@
 .heart2 {
-    left: 27.55rem;
-    right: auto;
-}
+    right: 70%;
+    }
+.heart {
+    right: 70%;
+    }
 
 .menu_img {
     height: 25rem;
@@ -18,6 +20,22 @@ h2 {
 
 .entrees_title{
     grid-column: 1;
+    grid-row: 2;
+}
+
+hr {
+    margin: 3.8rem 2rem 0;
+    grid-row: 2;
+    grid-column: 1;
+}
+
+.hr2 {
+    grid-column: 2;
+}
+
+.hr3 {
+    grid-column: 3;
+    grid-row: 2;
 }
 
 .plats_title {
@@ -28,6 +46,16 @@ h2 {
 .desserts_title {
     grid-column: 3;
     grid-row: 2;
+}
+
+.Dessertplat1 {
+    grid-row: 3;
+}
+.Dessertplat2 {
+    grid-row: 4;
+}
+.Dessertplat3 {
+    grid-row: 5;
 }
 
 .plat {
@@ -57,10 +85,44 @@ h2 {
     grid-column: 1/ span 3;
 }
 
+
+@media screen and (max-width: 1250px){
+    .menu {
+        grid-template-columns: 1fr 1fr;
+    }
+    .Dessertplat1 {
+        grid-column: 1;
+        grid-row: 7;
+    }
+    .Dessertplat2 {
+        grid-column: 1;
+        grid-row: 8;
+    }
+    .Dessertplat3 {
+        grid-column: 1;
+        grid-row: 9;
+    }
+    .desserts_title {
+    grid-column: 1;
+    grid-row: 6;
+    }
+    .hr3 {
+    grid-column: 1;
+    grid-row: 6;
+    }
+    .heart2 {
+    right: 58%;
+    }
+    .heart {
+    right: 58%;
+    }
+}
+
 footer {
     display: flex;
     justify-content: space-between;
     padding: 3rem;
+    align-items: center;
 }
 
 .logo_title {
@@ -72,5 +134,20 @@ footer {
 }
 
 .footer_paragraph {
-    margin: 0;
+    margin-top: 0.4rem;
+}
+
+@media screen and (max-width: 930px){
+.footer_icon {
+    opacity: 0;
+    position: absolute;
+}
+
+.footer_icon2 {
+    opacity: 0;
+    position: absolute;
+}
+footer {
+    padding: 1.5rem;
+}
 }
