--- a/css/menusmartphone.css
+++ b/css/menusmartphone.css
@@ -38,13 +38,13 @@ h1 {
 .flex_h1 {
     display: flex;
     align-items: center;
-    justify-content: space-between;
     padding-left: 1.5rem;
     margin-top: -55px;
 }
 
 .heart {
-    margin-right: 2.6rem;
+    position: absolute;
+    right: 2.6rem;
     font-size: 1.5rem;
     color: #565656;
 }
@@ -66,7 +66,7 @@ h1 {
 .heart2:active {
     color: #9356DC;
     opacity: 1;
-    transition: color 1500ms ease-in-out;
+    transition: color 1500ms ease-in-out forwards;
 }
 
 
@@ -94,6 +94,7 @@ hr {
     background-color: #99E2D0;
     border: none;
     margin-top: 4px;
+    margin-left: 1.4rem;
 }
 
 .plat {
@@ -111,22 +112,23 @@ hr {
 }
 
 .plat:hover .animation_menu {
-    width: 6.2rem;
-    display: flex;
-    transition: width 2s;
+    width: 20%;
+    transition: all 500ms;
 }
 
-.plat:active .animation_menu {
-    width: 6.2rem;
-    display: flex;
-    transition: width 2s;
+.plat:hover .card_content {
+    width: 80%;
+    transition: all 500ms;
+}
+
+.entree_descr {
+    width: 100%;
 }
 
 .card_content {
     padding: 1rem;
     width: 100%;
 }
-
 
 @keyframes fadein {
     from {
@@ -151,7 +153,6 @@ hr {
 
 .flex {
     display: flex;
-    justify-content: space-between;
 }
 
 h3 {
@@ -168,14 +169,11 @@ h3 {
 
 .price {
     font-weight: bold;
-    width: 10%;
 }
 
 .hidden {
     position: absolute;
 }
-
-
 
 .check {
     color: white;
