--- a/css/menusmartphone.css
+++ b/css/menusmartphone.css
@@ -99,9 +99,8 @@ hr {
 }
 
 .card {
-    width: 82%;
     flex: 1;
-    padding: 20px;
+    padding: 0.9rem;
 }
 
 .animation_menu {
@@ -201,9 +200,7 @@ hr {
 }
 
 h3 {
-    width: 100%;
     font-size: 1.2em;
-    margin: 0;
     font-family: "Roboto", sans-serif;
     white-space: nowrap;
     overflow: hidden;
@@ -221,7 +218,7 @@ h3 {
 }
 
 .price {
-    width: 15%;
+    width: 12%;
     font-family: "Roboto", sans-serif;
     margin: 0;
     font-weight: 800;
