--- a/css/menusmartphone.css
+++ b/css/menusmartphone.css
@@ -8,7 +8,7 @@
  }
   
 body {
-    font-family: Roboto;
+    font-family: "Roboto", sans-serif;
 }
 
 .header {
@@ -110,7 +110,6 @@ hr {
     background: #99E2D0;
     border-radius: 0 20px 20px 0;
     display: none;
-    transition-duration: 0.5s;
     animation: slideLeft 0.5s;
 }
 
@@ -141,7 +140,7 @@ hr {
 }
 
 .card:hover h3 {
-    width: 80%;
+    width: 82%;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -153,17 +152,15 @@ hr {
       width: 0%;
     }
     to {
-      width: 20%;
+      width: 18%;
     }
   }
   @keyframes spinner-rotate {
     0% {
-      transform: scale(1) rotate(0deg);
-      animation-delay: 1s;
+      transform: rotate(0deg);
     }
     100% {
-      transform: scale(1) rotate(360deg);
-      animation-duration: 1s;
+      transform: rotate(360deg);
     }
   }
 
@@ -189,18 +186,29 @@ hr {
     animation: fadein 6s;
 }
 
+.plat4 {
+    animation: fadein 8s;
+}
+
+.Dessertplat1 {
+    animation: fadein 2s;
+}
+
+.Dessertplat2 {
+    animation: fadein 4s;
+}
+
+.Dessertplat3 {
+    animation: fadein 6s;
+}
+
 .flex {
     width: 100%;
     display: flex;
-    align-items: center;
-    font-family: "Roboto", sans-serif;
-    justify-content: space-between;
-    margin: 0;
 }
 
 h3 {
     font-size: 1.2em;
-    font-family: "Roboto", sans-serif;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -210,7 +218,6 @@ h3 {
     width: 90%;
     margin: 0 5px 0 0;
     color: grey;
-    font-family: "Roboto", sans-serif;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -218,7 +225,6 @@ h3 {
 
 .price {
     width: 12%;
-    font-family: "Roboto", sans-serif;
     margin: 0;
     font-weight: 800;
 }
